Bug 260330 - jsc.cpp(3614,1): warning: function declared 'noreturn' should not return
Summary: jsc.cpp(3614,1): warning: function declared 'noreturn' should not return
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Template Framework (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-16 23:27 PDT by Fujii Hironori
Modified: 2023-08-17 02:31 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2023-08-16 23:27:46 PDT
clang-cl reports the following warnings for Windows port.

S:\wwbb\work\build\Source\WTF\wtf\Assertions.cpp(335,1): warning: function declared 'noreturn' should not return [-Winvalid-noreturn]
S:\wwbb\work\build\Source\JavaScriptCore\jsc.cpp(2602,1): warning: non-void function does not return a value [-Wreturn-type]
S:\wwbb\work\build\Source\JavaScriptCore\jsc.cpp(3614,1): warning: function declared 'noreturn' should not return [-Winvalid-noreturn]
Comment 1 Fujii Hironori 2023-08-16 23:32:23 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16776
Comment 2 EWS 2023-08-17 02:30:38 PDT
Committed 266995@main (6c660bb7b4f5): <https://commits.webkit.org/266995@main>

Reviewed commits have been landed. Closing PR #16776 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-08-17 02:31:13 PDT
<rdar://problem/114016538>