jsc.cpp(3614,1): warning: function declared 'noreturn' should not return https://bugs.webkit.org/show_bug.cgi?id=260330

Reviewed by Ross Kirsling.

clang-cl reported the following warnings for Windows port.

> WTF\wtf\Assertions.cpp(335,1): warning: function declared 'noreturn' should not return [-Winvalid-noreturn]
> JavaScriptCore\jsc.cpp(2602,1): warning: non-void function does not return a value [-Wreturn-type]
> JavaScriptCore\jsc.cpp(3614,1): warning: function declared 'noreturn' should not return [-Winvalid-noreturn]

Clang-cl should take a code path of GCC for UNUSED_FUNCTION, NO_RETURN
and NO_RETURN_WITH_VALUE macros to suppress compiler warnings.

* Source/WTF/wtf/Assertions.cpp:
* Source/WTF/wtf/Compiler.h:

Canonical link: https://commits.webkit.org/266995@main